cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/template__gpt-4o__row_6_update_5_template_20250422_140046.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to deploy an EC2 instance with a Security Group.

Parameters:
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues: [t2.micro, t2.small, t2.medium]
    ConstraintDescription: Must be a valid EC2 instance type.

  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be the name of an existing EC2 KeyPair.

  VpcId:
    Description: VPC ID where the instance will be deployed
    Type: AWS::EC2::VPC::Id
    ConstraintDescription: Must be a valid VPC ID.

  SubnetId:
    Description: Subnet ID where the instance will be deployed
    Type: AWS::EC2::Subnet::Id
    ConstraintDescription: Must be a valid Subnet ID.

Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      SubnetId: !Ref SubnetId
      ImageId: !Ref LatestAmiId

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP access
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

Outputs:
  InstanceId:
    Description: The Instance ID of the EC2 instance
    Value: !Ref EC2Instance

  InstancePublicIP:
    Description: The public IP address of the EC2 instance
    Value: !GetAtt EC2Instance.PublicIp

Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-0c55b159cbfafe1f0
    us-west-2:
      AMI: ami-0bdf93799014acdc4

Resources:
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Properties:
      Name: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
